# file_transfer

./: CMakeLists.txt  main.cpp
docs/: protocol.md
src/client/: Client.cpp  Client.h
src/include/: ConsoleColors.h  Constants.h
src/net/: ClientSocket.cpp  ClientSocket.h  ConnectionState.cpp  ServerSocket.cpp  ServerSocket.h
src/protocol/: MessageHeader.h  ProtocolBase.h  ProtocolUsage.h
src/protocol/io/: MessagesIO.cpp  MessagesIO.h
src/protocol/messages/: Header.h  InitMessage.h  MessageType.h  TransMessage.h
src/protocol/protocol_v1/: ProtocolV1Base.cpp  ProtocolV1Base.h
src/protocol/server_messages/: EndMessage.h  InitMessage.h  MessageType.h  TransMessage.h
src/server/: ClientStats.h  ConnectionHandler.cpp  ConnectionHandler.h  ConnectionState.h  FileHandler.cpp  FileHandler.h  Server.cpp  Server.h  ServerConnection.cpp  ServerConnection.h  ServerState.cpp  ServerState.h  ThreadManager.cpp  ThreadManager.h
